--- a/public/css/search-results.css
+++ b/public/css/search-results.css
@@ -39,10 +39,14 @@
 .no-search-results{
     text-align: center;
     color:whitesmoke;
+    font-size: 1.5em;
+    margin: 10px 0px 10px 0px;
 }
 
 .title-search-results{
     color:whitesmoke;
+    font-size: 1.75em;
+    margin: 5px 10px 5px 25px;
 }
 
 .page-link {
