--- a/public/css/typography.css
+++ b/public/css/typography.css
@@ -1,14 +1,17 @@
 body,p,label {
-    /* font-family: 'Ubuntu'; */
+    font-family: 'Oswald', sans-serif;
     font-weight: 'normal';
 }
 
 h2, h3, h4, h5 {
     color: black;
     text-align: center;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Oswald', sans-serif;
     font-weight:700;
     padding-top: 10px;
+}
+h1 {
+    font-family: 'Oswald', sans-serif;
 }
 
 
@@ -24,3 +27,5 @@ h2, h3, h4, h5 {
     }
 
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
