--- a/public/css/header-footer.css
+++ b/public/css/header-footer.css
@@ -4,22 +4,14 @@ body {
   position: relative;
   margin: 0;
   padding-bottom: 10rem;
+  min-height: calc(125vh - 107px - 60px);
 }
 .main-footer {
 	position: absolute;
-	/* background-image: url("https://thumbs.gfycat.com/UnrulyMediumFinwhale-max-1mb.gif"); */
 	bottom: 0;
 	width: 100%;
 }
 
-.footer-text{
-	color: #555555;
-	text-align: center;
-	color:whitesmoke;
-	font-family: 'Oswald', sans-serif;
-    font-weight:700;
-	padding: 40px;
-}
 
 .typography-heading-cont{
 	display:flex;
@@ -30,6 +22,7 @@ body {
 .main-header {
 	display:flex;
 	flex-direction: row;
+	flex-wrap: nowrap;
 	align-items: center;
 	justify-content: center;
 	
@@ -51,6 +44,16 @@ body {
 	font-family: 'Oswald', sans-serif;
 }
 
+.footer-text{
+	color: #555555;
+	text-align: center;
+	color:whitesmoke;
+	font-family: 'Oswald', sans-serif;
+    font-weight:700;
+	padding: 10px;
+}
+
+
 .main-title{
 	padding:5px;
 	margin: 0px;
@@ -68,20 +71,23 @@ body {
       0 0 150px #0ff;
 }
 
-@media screen and (max-width: 760px) {
+@media screen and (max-width: 768px) {
+	body {
+		min-height: calc(115vh - 107px - 60px);
+	  }
 }
 
 
 
 @media screen and (max-width: 450px) {
-	.main-header {
+	/* .main-header {
 		width: 100%;
 	  	display:flex;
 		flex-direction: column;
 		flex-wrap: nowrap;
 		align-items: center;
 		justify-content: space-between;
-    }
+    } */
 	.main-header {
 		padding: 10px 0px 20px 0px;
 	}
