--- a/public/css/search-results.css
+++ b/public/css/search-results.css
@@ -52,3 +52,12 @@
 .page-link {
     background-color: none;
 }
+
+@media screen and (max-width: 450px) {
+    .searchResults {
+        display:grid;
+        grid-template-rows: repeat(5, 0.5fr);
+        grid-template-columns: repeat(2, 0.5fr);
+        grid-gap: 20px;
+    }
+}
